--- a/.gitignore
+++ b/.gitignore
@@ -75,4 +75,4 @@ My project/Library/*
 My project/Temp/*
 My project/Logs/
 My project/UserSettings/Layouts/default-2021.dwlt
-Assets/Temp/*
+My project/Assets/Temp/*
