--- a/.gitignore
+++ b/.gitignore
@@ -73,6 +73,6 @@ crashlytics-build.properties
 
 My project/Library/*
 My project/Temp/*
-My project/Logs/
+My project/Logs/*
 My project/UserSettings/Layouts/default-2021.dwlt
 My project/Assets/Temp/*
