--- a/My Project/Assets/Plugins/BearFramework/BearFramework-main/package.json
+++ b/My Project/Assets/Plugins/BearFramework/BearFramework-main/package.json
@@ -6,7 +6,7 @@
   "unity": "2019.1",
   "unityRelease": "0b5",
   "dependencies": {
-    "com.unity.addressables": "1.19.19"    
+    "com.unity.nuget.newtonsoft-json": "3.0.2"
   },
   "keywords": [
     "keyword1",
